# legacylens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy-cloudrun.ps1  pyproject.toml  request_logs.jsonl
.qdrant_data/: meta.json
backend/: __init__.py  config.py  llm_client.py  requirements.txt
backend/api/: __init__.py  ask_service.py  chat_service.py  main.py  request_logs.py  retrieval_utils.py  schemas.py
backend/evals/: README.md  gnucobol_eval.py
backend/evals/datasets/: gnucobol_eval_sample.jsonl
backend/ingestion/: __init__.py  bm25_index.py  c_ast.py  chunker.py  discovery.py  embedder.py  pipeline.py  summarizer.py  vector_store.py
docs/: CALIBRATION.md  DEPLOY.md  REBUILD_SPEC.md  SETUP.md
frontend/: index.html  index.production.html
frontend/assets/: app.js  styles.css
legacylens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sample_cobol/: sample.cbl
scripts/: inspect_db.py  query_cli.py
